<resources>
    <string name="app_name">Android Technical Test</string>

    <string name="pupil_detail_id">Id</string>
    <string name="pupil_detail_name">Name</string>
    <string name="pupil_detail_country">Country</string>
    <string name="Location">Longitude</string>
    <string name="sync">Sync</string>
    <string name="edit">"Delete pupil</string>
    <string name="Pupil_ID"> Pupil Id</string>
    <string name="name_cannot_be_empty">  name cannot be empty</string>
    <string name="Latitude_must_be_a_valid_number"> Latitude must be a valid number</string>
    <string name="Country_cannot_be_empty">  Country cannot be empty</string>
    <string name="Longitude_must_be_a_valid_number">  Longitude must be a valid number</string>
    <string name="Image_URL"> Image Url</string>
    <string name="pupil_id_must_be_valid_number">  pupil_id must be valid number</string>
    <string name="invalid_image_url">http://lorempixel.com/640/480/people?name=Abigail</string>


    <string name="Pupil_id">PupilId</string>
    <string name="Search">Search</string>
    <string name="back">Back</string>
    <string name="Pupil_id_value">1234</string>

    <string name="Image_url_cannot_be_empty"> Image url cannot be empty</string>

    <string name="Pupil_id_must_be_a_valid_number"> Pupil id must be a valid number</string>

    Pupil_id_must_be_a_valid_number

    Image_url_cannot_be_empty

    <string name="name">Name</string>
    <string name="name_value"> Umanah </string>


    <string name="latitude_value">11111.11</string>
    <string name="latitude">latitude :</string>

    <string name="longitude_value">11111.11</string>
    <string name="longitude">longitude :</string>


    <string name="country">country</string>
    <string name="country_value">Kenya</string>


    <string name="data_reset">Api Data Reset</string>
    <string name="data_reset_failed">Data Reset Failed</string>

    <string name="enter_a_page_number"> Enter A Page Number</string>
    <string name="Load_Data"> Load Data</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Image">Image</string>
    <string name="Country">Enter Your Country</string>

    <string name="Enter_Latitude">Enter Your Latitude</string>
    <string name="Enter_Name">Enter Name </string>
    <string name="Enter_Longitude">Enter Your Longitude</string>
    <string name="Delete">Delete</string>
    <string name="Update"> Update</string>
    <string name="Add"> Add </string>
    <string name="Create"> Create </string>
    <string name="search_with_pupil_ID">  search with pupil ID </string>
    search_with_pupil_ID

    <string name="error_country_too_short">Country must be at least 2 characters</string>
    <string name="error_country_too_long">Country must not exceed 100 characters</string>


    <string name="error_name_too_short">Name must be at least 2 characters</string>
    <string name="error_name_too_long">Name must not exceed 100 characters</string>


    <string name="error_latitude_invalid">Latitude must be a valid number</string>
    <string name="error_latitude_range">Latitude must be between -90 and 90</string>

    <string name="error_longitude_invalid">Longitude must be a valid number</string>
    <string name="error_longitude_range">Longitude must be between -180 and 180</string>

    <string name="error_pupil_id_invalid">Pupil ID must be a valid number</string>

    <string name="error_image_url_too_short">Image URL must be at least 11 characters</string>
    <string name="error_image_url_too_long">Image URL must not exceed 1000 characters</string>
    <string name="error_image_url_invalid">Invalid image URL format</string>


</resources>
