<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp"
    android:backgroundTint="@android:color/white"> <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <!-- Country Label -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginEnd="8dp" />

        <!-- Country Value -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_value"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@android:color/black" />

        <!-- Delete Button -->
        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="4dp">

        <!-- Label -->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pupil_id"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginEnd="8dp" />

        <!-- Value -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pupil_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pupil_id_value"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@android:color/black" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="4dp">

        <!-- Label -->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginEnd="8dp" />

        <!-- Value -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/country_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_value"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@android:color/black" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="4dp">

        <!-- Label -->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginEnd="8dp" />

        <!-- Value -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/longitude_value"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@android:color/black" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="4dp">

        <!-- Label -->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginEnd="8dp" />

        <!-- Value -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/latitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude_value"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>
</com.google.android.material.card.MaterialCardView>