<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <!-- Centered Image -->
        <ImageView
            android:id="@+id/Image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_placeholder"
            android:contentDescription="@string/Image"
            android:scaleType="centerCrop"
            android:layout_marginBottom="24dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countryTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Country">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#2B2B2B"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EnterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_Name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#2B2B2B"

                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EnterLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_Latitude"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#2B2B2B"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <!-- Fourth Text Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_Longitude"
            android:layout_marginBottom="24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#2B2B2B"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/filledButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Create"
            />


    </LinearLayout>
</ScrollView>
