<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?android:attr/windowBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView
            android:id="@+id/Image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/Image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countryTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/Country"
            android:textColorHint="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/Image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:errorEnabled="true"
            app:errorTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/countryInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EnterName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_Name"
            android:textColorHint="@android:color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/countryTextField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:errorTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EnterLatitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_Latitude"
            android:textColorHint="@android:color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/EnterName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:errorTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/latitudeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EnterLongitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_Longitude"
            android:textColorHint="@android:color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/EnterLatitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:errorTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/longitudeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal|numberSigned"
                android:textColorHint="@android:color/black"
                android:textColor="#2B2B2B" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EnterPupilId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/Pupil_ID"
            android:textColorHint="@android:color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/EnterLongitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:errorTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pupilIdInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="@android:color/black"
                android:textColor="#2B2B2B" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Image_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/Image_URL"
            android:textColorHint="@android:color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/EnterPupilId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:errorTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/imageUrlInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:textColor="#2B2B2B"
                android:textColorHint="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Image_url" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
